--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/NewBlock.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/NewBlock.html
@@ -16,7 +16,7 @@
 {% block content %}
   <div>
   <p>
-  {% if self.player.block > 1 %}
+  {% if player.block > 1 %}
     {% if currentstate >= player.budget %} 
     {% blocktrans trimmed %}
         Sie haben das Ziel in der letzten Runde erreicht.
