--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/ChoicesOneShot.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/ChoicesOneShot.html
@@ -28,14 +28,14 @@
   </div>
 
   <div class = "row parent flex-row">
-    <button name="choice" value="0" class="option rsft-btn-choices">
+    <button name="choice1" value="0" class="option rsft-btn-choices">
       <span class = "rsft-span-choices">
         <div id = "option1">
         </div>
       </span>
     </button>
       
-    <button name="choice" value="1" class="option rsft-btn-choices">
+    <button name="choice1" value="1" class="option rsft-btn-choices">
       <span class = "rsft-span-choices">
         <div id = "option2">
         </div>
@@ -44,14 +44,29 @@
   </div>
   </div>
 
-  <span class = 'hidden'>{% next_button %}</span>
+  <div class = 'hidden'>
+    {% next_button %}
+    {% for field in form %}
+      {% formfield field %}
+    {% endfor %}
+  </div>
 
 {% endblock %}
 
 {% block scripts %}
   <script>
+  
+  var trial = {{ trial }};
+  $('.option').attr('name', 'choice' + trial );
+  var state = {{ state }};
 
-  $('.option').attr('name', 'choice' + {{ player.state }} );
+  $('.rsft-btn-choices').click(function() {
+      var choice = $(this).val();
+      $('#id_choice' +trial).val(choice);
+      $('#id_state'  +trial).val(state);
+      $('.otree-btn-next').click();
+    });
+
 
   var draw = function() {
     drawTrial('chart-trial', true, {{ trial }}, {{ Constants.num_trials }}, '');
