--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/NewBlock.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/NewBlock.html
@@ -40,7 +40,9 @@
 
   <div class = "center">
     <p>
-      {% blocktrans with nt=Constants.num_trials %}Erreiche <span class = "orange lightgrey shadow round-edge new-goal-info">{{ budget }}</span> Punkte in {{ nt }} Entscheidungen{% endblocktrans %}.
+      {% blocktrans with nt=Constants.num_trials budget=budget|floatformat:"0" %}
+      Erreiche <span class = "orange lightgrey shadow round-edge new-goal-info">{{ budget }}</span> Punkte in {{ nt }} Entscheidungen
+      {% endblocktrans %}.
     </p>
   </div>
 
@@ -50,9 +52,9 @@
   </div>
 
   <div class = "flex row lightgrey shadow round-edge" style = "margin: 20px; padding: 1rem; background: #FAFAFA;">
-    <div class = "option orange-border" id = "option1">
+    <div class = "option orange-border {{ img1 }}">
     </div>
-    <div class = "option orange-border" id = "option2">
+    <div class = "option orange-border {{ img2 }}">
     </div>
   </div>
 
@@ -65,8 +67,8 @@
 
 {% block scripts %}
 <script>
-  drawAction('option1', {{ x1|json }}, {{ p1|json }}, true, true, {{ Constants.point_label|json }}, {{ Constants.action_label|json }} +" A");
-  drawAction('option2', {{ x2|json }}, {{ p2|json }}, true, true, {{ Constants.point_label|json }}, {{ Constants.action_label|json }} + " B");
+ /* drawAction('option1', {{ x1|json }}, {{ p1|json }}, true, true, {{ Constants.point_label|json }}, {{ Constants.action_label|json }} +" A");
+  drawAction('option2', {{ x2|json }}, {{ p2|json }}, true, true, {{ Constants.point_label|json }}, {{ Constants.action_label|json }} + " B");*/
 
 </script>
 {% endblock %}
