--- a/gneezy_potter/templates/gneezy_potter/GneezyPotter.html
+++ b/gneezy_potter/templates/gneezy_potter/GneezyPotter.html
@@ -7,26 +7,26 @@
 
 {% block content %}
   <p>
-  Next is an investment task. The task has 9 rounds. For each round you will receive 100 cents cents. You decide which part of the 100 cents (between 0 cents and 100 cents) you wish to keep and which part you wish invest in a lottery like the following:
+  Next is an investment task, it is relevant for your bonus. You receive 100 pennys. Your task is to decide which part of the 100 pennys (between 0 pennys and 100 pennys) you wish to keep, and which part you wish invest in a lottery like the following:
   </p>
 
   <blockquote>
     You have a chance of 2/3 (67%) to lose the amount you invested and<br> a chance of 1/3 (33%) to win two and a half times (2.5) the amount you invested.
   </blockquote> 
 
+  <h3>What can I earn?</h3>
   <p>
-    Suppose you decide to invest X cents (0 &le; X &le; 100) in the lottery. You are asked to enter the amount into the form below.
-  </p>
-  <p>
-    Your earnings are determined as follows. Say you invested an amount of X in the lottery:
+    Suppose you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Your earnings are determined as follows.
   </p>
   <ul>
-    <li>With probability 67% the lottery pays zero and you earn the amount that was not invested.
-    <li>With probability 33% the lottery pays 2.5X and your earn +2.5X plus the amount that was not invested.
+    <li>With probability <b>67%</b> the lottery pays zero, then you earn the <b>amount that you did not invest</b>.
+    <li>With probability <b>33%</b> the lottery pays 2.5X, then you earn <b>+2.5&nbsp;x&nbsp;X plus the amount that you did not invest</b>.
   </ul>
 
-  <h2>Investment Decision</h2>
-  Which part of the 100 cents do you wish to invest in the lottery stated above?
+  <h3>Investment Decision</h3>
+  Suppose you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Please to enter the amount into the form below.
+
+  Which part of the 100 pennys do you wish to invest in the lottery stated above?
 
   <table class = "table">
     <tr>
