--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/ChoicesOneShot.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/ChoicesOneShot.html
@@ -30,14 +30,14 @@
   <div class = "row parent flex-row">
     <button name="choice1" value="0" class="option rsft-btn-choices">
       <span class = "rsft-span-choices">
-        <div id = "option1">
+        <div class = "{{ img1 }}" id = "option1">
         </div>
       </span>
     </button>
       
     <button name="choice1" value="1" class="option rsft-btn-choices">
       <span class = "rsft-span-choices">
-        <div id = "option2">
+        <div class = "{{ img2 }}" id = "option2">
         </div>
       </span>
     </button>
@@ -59,27 +59,27 @@
   var trial = {{ trial }};
   $('.option').attr('name', 'choice' + trial );
   var state = {{ state }};
+  var start = 0;
+  var end = 0;
 
   $('.rsft-btn-choices').click(function() {
-      var choice = $(this).val();
-      $('#id_choice' +trial).val(choice);
-      $('#id_state'  +trial).val(state);
-      $('.otree-btn-next').click();
+    end = window.performance.now();
+    $('#id_rt_ms' + (trial)).val(end - start);
+    var choice = $(this).val();
+    $('#id_choice' +trial).val(choice);
+    $('#id_state'  +trial).val(state);
+    $('.otree-btn-next').click();
     });
 
 
   var draw = function() {
     drawTrial('chart-trial', true, {{ trial }}, {{ Constants.num_trials }}, '');
     drawEarnings('chart-earnings', {{ player.state|json }}, {{ player.budget|json }}, {{ max_less_state|json }}, {{ max_earning|json }}, true, true, {{ Constants.point_label|json }});
-    drawAction('option1', {{ x1|json }}, {{ p1|json }}, true, true, {{ Constants.point_label|json }}, {{ Constants.action_label|json }} +" A");
-    drawAction('option2', {{ x2|json }}, {{ p2|json }}, true, true, {{ Constants.point_label|json }}, {{ Constants.action_label|json }} + " B");    
-  };
+  }
 
-  $( document ).ready(function() {
-    setTimeout(function() { draw() }, 750);
-    $('.dialogue').fadeIn(500).fadeOut(600);
+  $( document ).ready( function() {
+    setTimeout(draw, 1000);
+    $('.dialogue').fadeIn(1000).fadeOut(500);
   });
-
-
   </script>
 {% endblock %}
