--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Incentives.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Incentives.html
@@ -10,17 +10,17 @@
 
 {% block content %}
 
-  <p> {% blocktrans with fee=participation_fee|c %}
+  <p> {% blocktrans with fee=participation_fee %}
     Nach Beendigung der Studie erhalten Sie {{ fee }} und zusätzlich eine <b>Bonuszahlung</b>, die von Ihren Entscheidungen abhängt
   {% endblocktrans %}</p>
 
-  <p> {% blocktrans with rwc_s=real_world_currency_per_success|c rwc_pp=real_world_currency_per_point|c %}
-    Für den Bonus werden zufällig fünf der nachfolgenden Runden ausgewählt. Für jede der gewählten Runden, in der Sie das Punkteziel erreicht haben, erhalten Sie <b>+&nbsp;{{ rwc_s }}</b> dafür, dass Sie das Ziel erreicht haben, plus <b>+&nbsp;{{ rwc_pp }} </b> für jeden Punkt der über das Ziel hinausgeht. In den Runden, in denen Sie das Punkteziel nicht erreicht haben, ist der Bonus 0.
+  <p> {% blocktrans with rwc_pp=real_world_currency_per_point %}
+    Sie erhalten für fünf der nachfolgenden Runden einen Bonus. Jeder Punkt, den Sie sammeln, ist <b>+&nbsp;{{ rwc_pp }} </b> wert. Jedoch erhalten Sie den Bonus nur für Runden in denen Sie <b>das Ziel erreicht haben</b>, für Runden in denen Sie das Ziel nicht erreichen gibt es keinen Bonus. Die fünf Runden, die Ihren Bonus bestimmen, werden am Ende des Experimentes zufällig aus allen Runden gewählt. 
   {% endblocktrans %}</p>
 
   <p class = 'example'>
-  {% blocktrans with currency=0.50|c rwc_s=real_world_currency_per_success|c rwc_pp=real_world_currency_per_point|c %}
-    Ihr Punkteziel ist 8 Punkte, Sie haben nach der fünften Entscheidung 12 Punkte gesammelt, dann ist ihr Bonus für die Runde {{ currency }} wenn diese Runde zu den fünf Runden gehört die am Ende als Bonus gewählt werden. Das bedeutet {{ rwc_s }} for reaching the goal plus  {{ rwc_pp }} x 4, da Sie 4 Punkte mehr als das Punkteziel gesammelt haben.
+  {% blocktrans with example_pay=example_pay rwc_pp=real_world_currency_per_point%}
+    Ihr Punkteziel ist 8 Punkte, Sie haben nach der fünften Entscheidung 12 Punkte gesammelt, dann ist der Bonus für diese Runde {{ example_pay }} wenn diese Runde zu den fünf Runden gehört die am Ende als Bonus gewählt werden. Das bedeutet {{ rwc_pp }} x 12, da Sie 12 Punkte gesammelt haben.
    {% endblocktrans %}
   </p>
 
@@ -44,10 +44,17 @@
       <input id="q2" name="q2" min="0" max="10" step="0.01" pattern="[0-9]+([\.,][0-9]+)?" required placeholder={% blocktrans trimmed %}"Zahl"{% endblocktrans %} onfocus="if (this.placeholder=={% blocktrans trimmed %}"Zahl"{% endblocktrans %}) this.placeholder='';">
     </p>
     <p>
-      <label for="q3">{% blocktrans trimmed %}... einem Punkteziel von 5 wenn Sie 7 Punkte gesammelt haben? {% endblocktrans %}</label>
-      <input id="q3" name="q3" min="1" max="10" step="0.01" pattern="[0-9]+([\.,][0-9]+)?" required placeholder={% blocktrans trimmed %}"Zahl"{% endblocktrans %} onfocus="if (this.placeholder=={% blocktrans trimmed %}"Zahl"{% endblocktrans %}) this.placeholder='';">
+      <label for="q3">{% blocktrans trimmed %}... einem Punkteziel von 5, wenn Sie 7 Punkte gesammelt haben? {% endblocktrans %}</label>
+      <input id="q3" name="q3" min="0" max="10" step="0.01" pattern="[0-9]+([\.,][0-9]+)?" required placeholder={% blocktrans trimmed %}"Zahl"{% endblocktrans %} onfocus="if (this.placeholder=={% blocktrans trimmed %}"Zahl"{% endblocktrans %}) this.placeholder='';">
     </p>
-  </fieldset>
+    <p>
+      <label for="q4">{% blocktrans trimmed %} Welche der nachfolgenden Runden sind relevant für Ihren Bonus? {% endblocktrans %}</label>
+      <input id="q4" name="q4" type="radio" value="1" /> {% blocktrans trimmed %}Die ersten fünf Runden sind relevant.{% endblocktrans %} </br>
+      <input id="q4" name="q4" type="radio" value="2"/> {% blocktrans trimmed %}Die letzten fünf Runden sind relevant.{% endblocktrans %}</br>
+      <input id="q4" name="q4" type="radio" value="3" /> {% blocktrans trimmed %}Jede Runde ist relevant: es werden fünf Runden zufällig gezogen.{% endblocktrans %}</br>
+    </p>
+    </fieldset>
+  
 
 
   <div class = "right">
@@ -65,12 +72,17 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.12.0/validate.min.js"></script>
 
   <script>
-    var answers   = ["0", "0.10", "0.30"];
-    var questions = ["q1", "q2", "q3"];
+    var answers   = ["0", "0.50", "0.70", "3"];
+    var questions = ["q1", "q2", "q3", "q4"];
 
     function check_answers(i) {
       var qid = "#" + questions[i];
-      var value = $(qid).val().toLowerCase();
+      if ($(qid).prop("type") == "text") {
+        var value = $(qid).val().toLowerCase();
+      }
+      if ($(qid).prop("type") == "radio") {
+        var value = $("input:radio[name=q" +(i+1) +"]:checked").val();
+      }
 
       if (value == answers[i]) {
         $(qid).parent('p').css({"color": "#9CBA7F"});       
@@ -83,8 +95,11 @@
 
     $("#submitcheck").click( function() {
 
-      var arr = $('.rsft-form :input').map(function () {
-        return this.value.toLowerCase();
+      var $inputs = $('.rsft-form').find(':checked,:selected,:text,textarea').filter(function() {
+            return $.trim( this.value ) != '';
+        });
+      var arr = $inputs.map(function(){
+          return this.value;
       }).get();
       
       var alert_ok = {% blocktrans trimmed %}"Richtig! Weiter geht es mit Klick auf OK."{% endblocktrans %}
