--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Page.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Page.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block app_styles %}
+  <link href="{% static 'risk_sensitive_foraging/sprites.css' %}" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" type="text/css">
