updated risk_sensitive_foraging in many ways

--- a/gneezy_potter/templates/gneezy_potter/GneezyPotter.html
+++ b/gneezy_potter/templates/gneezy_potter/GneezyPotter.html
@@ -16,16 +16,17 @@
 
   <h3>What can I earn?</h3>
   <p>
-    Suppose you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Your earnings are determined as follows.
+    When you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Your earnings are determined as follows.
   </p>
   <ul>
     <li>With probability <b>67%</b> the lottery pays zero, then you earn the <b>amount that you did not invest</b>.
     <li>With probability <b>33%</b> the lottery pays 2.5X, then you earn <b>+2.5&nbsp;x&nbsp;X plus the amount that you did not invest</b>.
   </ul>
+  <p>
+    Suppose you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Please to enter the amount into the form below.
+  </p>
 
   <h3>Investment Decision</h3>
-  Suppose you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Please to enter the amount into the form below.
-
   Which part of the 100 pennys do you wish to invest in the lottery stated above?
 
   <table class = "table">
