--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Coverstory_example.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Coverstory_example.html
@@ -5,7 +5,7 @@
 {% block title %}
   <h1>
   {% blocktrans trimmed %}
-  Verständnisfragen
+  Darstellung der Aufgabe
   {% endblocktrans %}
   </h1>
 {% endblock %}
