fixed error msg in incentive instruction

--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Incentives.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Incentives.html
@@ -102,7 +102,7 @@
       }).get();
       
       var alert_ok = {% blocktrans trimmed %}"Richtig! Weiter geht es mit Klick auf OK."{% endblocktrans %}
-      var alert_notok = {% blocktrans trimmed %}"Nicht ganz richtig. Schauen Sie sich die Antworten in den rot markierten Feldern bitte noch einmal an und korrigieren Sie diese."{% endblocktrans %}
+      var alert_notok = {% blocktrans trimmed %}"Nicht ganz richtig. Schauen Sie sich die Antworten in den rot markierten Feldern bitte noch einmal an und korrigieren Sie diese. Bitte geben Sie führende Nullen ein (0.10 statt .10).{% endblocktrans %}
 
 
       /*.map(Number) transforms the values to numbers*/
