made session vars to participant vars

--- a/payment_info/templates/payment_info/PaymentInfo.html
+++ b/payment_info/templates/payment_info/PaymentInfo.html
@@ -8,17 +8,18 @@
 {% block content %}
 
     <p>
-        Thank you for your time and effort, participating in our study.
+        Thank you for your time and effort and for participating in our study. <u>Please do not close this page.</u>
     </p>
 
     <h3>Your payment</h3>
     <p>
-        Your payment is {{ payment }}.
+        Your total payment (including your bonus) equals {{ payment }}. You will be paid within 2-3 days after completing this study.
     </p>
 
-    <h3>You will be redirected in 10 seconds</h3>
+
+    <h3>Please wait. You will be redirected in 10 seconds</h3>
     <p>
-        Please don't close the browser, you will be redirected to Prolific Academic now.
+        Please wait, you will be redirected to Prolific Academic now to completed this study.
     </p>
     <p class = 'hidden' id = 'id_redirect'><b>
         (If the re-rirect does not work, please <a href = 'https://app.prolific.ac/submissions/complete?cc=YZ7SCG7Q'>click here</a>.)</b>
