updated instructions and payment for gneezy

--- a/gneezy_potter/templates/gneezy_potter/GneezyPotter.html
+++ b/gneezy_potter/templates/gneezy_potter/GneezyPotter.html
@@ -7,27 +7,27 @@
 
 {% block content %}
   <p>
-  Next is an investment task, it is relevant for your bonus. You receive 100 pennys. Your task is to decide which part of the 100 pennys (between 0 pennys and 100 pennys) you wish to keep, and which part you wish invest in a lottery like the following:
+  Next is an investment task (it also counts toward your bonus). You receive 100 pennys. Your task is to decide which part of the 100 pennys (between 0 pennys and 100 pennys) you wish to keep, and which part you wish invest in a lottery. The lottery is the following:
   </p>
 
   <blockquote>
-    You have a chance of 2/3 (67%) to lose the amount you invested and<br> a chance of 1/3 (33%) to win two and a half times (2.5) the amount you invested.
+    You have a chance of 2/3 (67%) to lose the amount you invested. You have a chance of 1/3 (33%) to win two and a half times (2.5x) the amount you invested. You keep the amount not invested.
   </blockquote> 
 
   <h3>What can I earn?</h3>
   <p>
-    When you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Your earnings are determined as follows.
+    When you decide to invest X pennys (0 &le; X &le; 100) in the lottery, your earnings are:
   </p>
   <ul>
-    <li>With probability <b>67%</b> the lottery pays zero, then you earn the <b>amount that you did not invest</b>.
-    <li>With probability <b>33%</b> the lottery pays 2.5X, then you earn <b>+2.5&nbsp;x&nbsp;X plus the amount that you did not invest</b>.
+    <li>With probability <b>67%</b> the lottery pays zero. Youou earn the <b>amount that you did not invest</b>.
+    <li>With probability <b>33%</b> the lottery pays 2.5X. You earn <b>+2.5&nbsp;x&nbsp;X plus the amount that you did not invest</b>.
   </ul>
   <p>
-    Suppose you decide to invest X pennys (0 &le; X &le; 100) in the lottery. Please to enter the amount into the form below.
+    Please to enter the amount that you decide to invest into the lottery (0 &le; X &le; 100)  in the form below.
   </p>
 
   <h3>Investment Decision</h3>
-  Which part of the 100 pennys do you wish to invest in the lottery stated above?
+  Which part of the 100 pennys do you wish to invest in the lottery?
 
   <table class = "table">
     <tr>
