small text updates

--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Coverstory_check.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Coverstory_check.html
@@ -12,11 +12,9 @@
 
 
 {% block content %}
-  <p>
-  {% blocktrans trimmed %}
+  <p>{% blocktrans trimmed %}
   Für diese Studie ist es wichtig, dass Sie die Darstellungsweise der Aufgabe verstehen. Unten sehen Sie eine Entscheidungssituation und einige Fragen zu der Situation.
-  {% endblocktrans %}
-  </p>
+  {% endblocktrans %}</p>
 
   
   <img class = "center img" src='{% static "risk_sensitive_foraging/attention_check.png" %}'/>
