new learning trials, bugfix in new block page

--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Consent.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Consent.html
@@ -16,7 +16,7 @@
   {% endblocktrans %}
   </p>
 
-  <p>{% blocktrans trimmed %}
+  <p>{% blocktrans trimmed %}<p>
   vielen Dank für Ihr Interesse an dieser Studie.
   {% endblocktrans %}
   </p>
