--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/Coverstory_check.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/Coverstory_check.html
@@ -4,9 +4,7 @@
 
 {% block title %}
   <h1>
-  {% blocktrans trimmed %}
-  Verständnisfragen
-  {% endblocktrans %}
+  {% blocktrans trimmed %}Verständnisfragen{% endblocktrans %}
   </h1>
 {% endblock %}
 
