--- a/risk_sensitive_foraging/templates/risk_sensitive_foraging/NewBlock.html
+++ b/risk_sensitive_foraging/templates/risk_sensitive_foraging/NewBlock.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% if player.choice_number > 1 %}
+    {% if player.decision_number > 1 %}
       <span class = "round goal-reached-info parent lightgrey shadow">
         <p class = "center">
           {% blocktrans with successes=successes num_blocks=num_blocks %}
@@ -23,6 +23,7 @@
   {% if decision_number > 1 %}
     {% if success == 1 %} 
     {% blocktrans trimmed %}
+    
         Sie haben das Ziel in der letzten Runde erreicht.
     {% endblocktrans %}
 
